# markov

./: .env.example  .gitignore  NEXT_LEVEL_ROADMAP.md  README.md  app.py  pyproject.toml  research_program.md
.streamlit/: config.toml
src/markov_regime/: __init__.py  __main__.py  artifacts.py  baselines.py  bootstrap.py  cli.py  config.py  confirmation.py  consensus.py  data.py  features.py  interpretation.py  model.py  readiness.py  reporting.py  research.py  research_notes.py  robustness.py  runtime.py  strategy.py  ui.py  walkforward.py
tests/: conftest.py  test_regime_research.py
