[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markov-regime-research"
version = "0.1.0"
description = "Inspectable local HMM regime research app with walk-forward evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hmmlearn>=0.3.3",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "streamlit>=1.43.0",
  "yfinance>=0.2.55",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
markov-regime = "markov_regime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
